--- a/pom.xml
+++ b/pom.xml
@@ -40,12 +40,6 @@
             <scope>test</scope>
         </dependency>
 
-        <dependency>
-            <groupId>commons-io</groupId>
-            <artifactId>commons-io</artifactId>
-            <version>2.6</version>
-        </dependency>
-
         <!-- for cucumber -->
         <dependency>
             <groupId>io.cucumber</groupId>
@@ -63,6 +57,7 @@
             <groupId>com.epam.reportportal</groupId>
             <artifactId>agent-java-cucumber4</artifactId>
             <version>4.0.0</version>
+            <scope>test</scope>
         </dependency>
         <!-- for cucumber -->
 
